--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,20 @@
 {
-  "name": "Weather",
-  "short_name": "Weather",
-  "description": "Weather dashboard with search, dark mode, and offline support.",
+  "name": "Skyfall Weather",
+  "short_name": "Skyfall",
   "start_url": "./",
-  "scope": "./",
   "display": "standalone",
-  "background_color": "#4a4a4a",
-  "theme_color": "#2b2b2b",
+  "background_color": "#ffffff",
+  "theme_color": "#2563eb",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
